--- a/adm7.html
+++ b/adm7.html
@@ -8,7 +8,7 @@
   <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
-  <title>Elecciones Parlamento Catalunya 2024 - Municipios - La Vanguardia</title>
+  <title>Elecciones Parlamento Catalunya 2024 - Sección censal - La Vanguardia</title>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css" rel="stylesheet" type="text/css" />
   <link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css"
     rel="stylesheet" type="text/css" />
@@ -24,7 +24,7 @@
     <div id="custom-controls" class="map-overflow map-controls" style="visibility: visible;">
       <!-- Removed hidden class and added inline style for visibility -->
       <div class="map-overflow-wrap">
-        <div class="map-controls-hint">Selecciona un mapa:</div>
+        <div class="map-controls-hint">Selecciona un año y partido:</div>
         <div class="map-controls-years">
           <button class="map-control map-control--year" data-year="2024"
             onclick="updatePartyButtons(2024)">2024</button>
@@ -54,57 +54,63 @@
   <script src="./map.js"></script>
   <script src="./partyColors.js"></script>
   <script>
+    let map;
     document.addEventListener('DOMContentLoaded', function () {
       let mapLoaded = false;
       mapboxgl.clearStorage();
       const loadMap = () => {
-      const isMobile = window.innerWidth < 900;
-      const map = new ElectionMap('pk.eyJ1IjoibGF1cjA1IiwiYSI6ImNqdnoyaTd3cDBrNjk0NW1xdGpyYWttenIifQ.K5bENvQciGvPOfnO9ERWzw', {
-        container: 'map-container',
-        style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau',
-        source: 'mapbox://laur05.electionscat2024_adm7?fresh=true',       
-        sourceLayer: 'electionscat2024_adm7',
-        center: [2.15, 41.42],
-        zoom: isMobile ? 9 : 10,
-        minZoom: isMobile ? 9 : 10,
-        initialSelect: 'winner2024',
-        // hash: true,
-        scrollZoom: true,
-        years: [2021, 2024],
-        parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC','JUNTSXCAT', 'JXCAT','PDECAT','UP','ECP','CUP','COMUNS', 'SUMAR', 'VOX','ALIANZACAT'],
-        partyColors: window._partyColors,
-      });
-      mapLoaded = true;
-    }
+        const isMobile = window.innerWidth < 900;
+        map = new ElectionMap('pk.eyJ1IjoibGF1cjA1IiwiYSI6ImNqdnoyaTd3cDBrNjk0NW1xdGpyYWttenIifQ.K5bENvQciGvPOfnO9ERWzw', {
+          container: 'map-container',
+          style: 'mapbox://styles/laur05/clvzejo7w014w01qu65sg9uau',
+          source: 'mapbox://laur05.electionscat2024_adm7?fresh=true',
+          sourceLayer: 'electionscat2024_adm7',
+          center: [2.15, 41.42],
+          zoom: isMobile ? 9 : 10,
+          minZoom: isMobile ? 9 : 10,
+          initialSelect: 'winner2024',
+          // hash: true,
+          scrollZoom: true,
+          years: [2021, 2024],
+          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT','JUNTSXCAT', 'PDECAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX', 'ALIANZACAT', 'JUNTS'],
+          partyColors: window._partyColors,
+        });
+        mapLoaded = true;
+      };
+      loadMap(); // Load the map immediately after defining
 
-    // Remove Mapbox service worker cache
-    if (caches && caches.keys()) {
-      caches.keys().then((keys) => {
-        Promise.all(keys.filter((k) => k === 'mapbox-tiles').map((k) => caches.delete(k)))
-          .then(() => { loadMap() })
-          .catch(() => { loadMap() });
-      })
-    } else loadMap(); 
-
-    const partyData = {
-        2024: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JUNTSXCAT', 'Vox': 'VOX', 'Sumar': 'Sumar', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP', 'Aliança Cat':'ALIANZACAT' },
-        2021: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JUNTSXCAT', 'VOX': 'VOX', 'ECP': 'ECP', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP' }
+      const partyData = {
+        2024: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JUNTSXCAT', 'Vox': 'VOX', 'Sumar': 'Sumar', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP', 'Aliança Cat': 'ALIANZACAT' },
+        2021: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JXCAT', 'Vox': 'VOX', 'ECP': 'ECP', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP' }
       };
 
       window.updatePartyButtons = function (year) {
         const container = document.getElementById('party-controls');
-        container.innerHTML = ''; 
+        container.innerHTML = ''; // Clear existing buttons
 
+        let winnerButton;
         Object.entries(partyData[year]).forEach(([displayName, dataValue]) => {
           let button = document.createElement('button');
           button.className = 'map-control map-control--fill js-control';
           button.dataset.fill = dataValue;
           button.textContent = displayName;
-          button.onclick = function () { selectParty(dataValue, year); };
+          if (year === 2021) {
+            button.onclick = function () { selectParty('winner', year); };
+          } else {
+            button.onclick = function () { selectParty(`winner${year}`, year); };
+          }
+          container.appendChild(button);
+          //button.onclick = function () { selectParty(dataValue, year); };
           container.appendChild(button);
         });
 
-        // Update the style of year buttons
+        if (map && mapLoaded) {
+          map.currentYear = year.toString();
+          map.currentFill = 'winner';
+          map.setMapFill();
+
+        }
+
         const yearBtns = document.querySelectorAll('.map-control--year');
         yearBtns.forEach(btn => {
           if (btn.dataset.year === year.toString()) {
@@ -120,8 +126,6 @@
               .then(() => { loadMap() })
               .catch(() => { loadMap() });
           })
-          const yearBtn = document.getElementsByClassName('map-control--year');
-
         } else loadMap();
 
         // Optionally set an 'active' class on the first button
@@ -130,11 +134,15 @@
         }
       };
 
-      function selectParty(party, year) {
+      window.selectParty = function (party, year) {
+        console.log('selectParty called with party:', party, 'and year:', year);
         console.log('Party selected:', party, 'for year:', year);
-        // map.setFilter('your-layer', ['==', 'party', party]);
-        // map.setYear(year);
-      }
+        if (map) {
+          map.currentYear = year.toString();
+          map.currentFill = party;
+          map.setMapFill();
+        }
+      };
 
       // Initialize with the default year
       updatePartyButtons(2024);
@@ -144,8 +152,3 @@
 </body>
 
 </html>
-
-
-    
-
-  
