--- a/mudo.html
+++ b/mudo.html
@@ -24,12 +24,10 @@
     <div id="custom-controls" class="map-overflow map-controls" style="visibility: visible;">
       <!-- Removed hidden class and added inline style for visibility -->
       <div class="map-overflow-wrap">
-        <div class="map-controls-hint">Selecciona un mapa:</div>
+        <div class="map-controls-hint">Selecciona un año y partido:</div>
         <div class="map-controls-years">
-          <button class="map-control map-control--year" data-year="2024"
-            onclick="updatePartyButtons(2024)">2024</button>
-          <button class="map-control map-control--year" data-year="2021"
-            onclick="updatePartyButtons(2021)">2021</button>
+          <button class="map-control map-control--year" data-year="2024" onclick="updatePartyButtons(2024)">2024</button>
+          <button class="map-control map-control--year" data-year="2021" onclick="updatePartyButtons(2021)">2021</button>
         </div>
         <div class="map-controls-fill" id="party-controls"></div>
       </div>
@@ -54,84 +52,96 @@
   <script src="./map.js"></script>
   <script src="./partyColors.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      let mapLoaded = false;
-      mapboxgl.clearStorage();
-      const loadMap = () => {
-        const isMobile = window.innerWidth < 900;
-        const map = new ElectionMap('pk.eyJ1IjoibGF1cjA1IiwiYSI6ImNqdnoyaTd3cDBrNjk0NW1xdGpyYWttenIifQ.K5bENvQciGvPOfnO9ERWzw', {
-          container: 'map-container',
-          style: 'mapbox://styles/laur05/cli8rqg7a02qn01pr8qu2gh5e',
-          source: 'mapbox://laur05.electionscat2024_adm4?fresh=true',
-          sourceLayer: 'electionscat2024_adm4',
-          center: [1.55, 41.82],
-          zoom: isMobile ? 7 : 8,
-          minZoom: isMobile ? 5.5 : 6,
-          initialSelect: 'winner2024',
-          // hash: true,
-          scrollZoom: true,
-          years: [2021, 2024],
-          parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDECAT', 'ECP', 'CUP', 'COMUNS', 'SUMAR', 'VOX'],
-          partyColors: window._partyColors,
-        });
-        mapLoaded = true;
-      };
-      loadMap(); // Load the map immediately after defining
+    let map;
 
-      const partyData = {
-        2024: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'Sumar', 'CUP', 'CS', 'PP'],
-        2021: ['Ganador', 'PSC', 'ERC', 'JXCAT', 'VOX', 'ECP', 'CUP', 'CS', 'PP']
-      };
+const loadMap = () => {
+  const isMobile = window.innerWidth < 900;
+  map = new ElectionMap('pk.eyJ1IjoibGF1cjA1IiwiYSI6ImNqdnoyaTd3cDBrNjk0NW1xdGpyYWttenIifQ.K5bENvQciGvPOfnO9ERWzw', {
+    container: 'map-container',
+    style: 'mapbox://styles/laur05/cli8rqg7a02qn01pr8qu2gh5e',
+    source: 'mapbox://laur05.electionscat2024_adm4?fresh=true',
+    sourceLayer: 'electionscat2024_adm4',
+    center: [1.55, 41.82],
+    zoom: isMobile ? 7 : 8,
+    minZoom: isMobile ? 5.5 : 6,
+    initialSelect: 'winner2024',
+    scrollZoom: true,
+    years: [2021, 2024],
+    parties: ['PP', 'PSOE', 'CS', 'ERC', 'PSC', 'JXCAT', 'PDECAT', 'ECP-PEC', 'CUP', 'COMUNS', 'SUMAR', 'VOX', 'ALIANZACAT', 'JUNTS', 'UP'],
+    partyColors: window._partyColors,
+  });
+};
 
-      window.updatePartyButtons = function (year) {
-        const container = document.getElementById('party-controls');
-        container.innerHTML = ''; // Clear existing buttons
+const partyData = {
+  2024: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JXCAT', 'Vox': 'VOX', 'Sumar': 'Sumar', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP', 'Aliança Cat': 'ALIANZACAT' },
+  2021: { 'Ganador': 'winner', 'PSC': 'PSC', 'ERC': 'ERC', 'Junts': 'JXCAT', 'Vox': 'VOX', 'ECP': 'UP', 'CUP': 'CUP', 'CS': 'CS', 'PP': 'PP' }
+};
 
-        partyData[year].forEach(party => {
-          let button = document.createElement('button');
-          button.className = 'map-control map-control--fill js-control';
-          button.dataset.fill = party;
-          button.textContent = party;
-          button.onclick = function () { selectParty(party, year); };
-          container.appendChild(button);
-        });
+const updatePartyButtons = (year) => {
+  const container = document.getElementById('party-controls');
+  container.innerHTML = ''; // Clear existing buttons
 
-        // Update the style of year buttons
-        const yearBtns = document.querySelectorAll('.map-control--year');
-        yearBtns.forEach(btn => {
-          if (btn.dataset.year === year.toString()) {
-            btn.classList.add('bold-button'); // Add bold style to clicked button
-          } else {
-            btn.classList.remove('bold-button'); // Remove bold style from other buttons
-          }
-        });
+  Object.entries(partyData[year]).forEach(([displayName, dataValue]) => {
+    let button = document.createElement('button');
+    button.className = 'map-control map-control--fill js-control';
+    button.dataset.fill = dataValue;
+    button.textContent = displayName;
+    button.onclick = function () { selectParty(dataValue, year); };
+    container.appendChild(button);
+  });
 
-        if (caches && caches.keys()) {
-          caches.keys().then((keys) => {
-            Promise.all(keys.filter((k) => k === 'mapbox-tiles').map((k) => caches.delete(k)))
-              .then(() => { loadMap() })
-              .catch(() => { loadMap() });
-          })
-          const yearBtn = document.getElementsByClassName('map-control--year');
+  if (map) {
+    map.currentYear = year.toString();
+    map.currentFill = 'winner' + year;
+    map.setMapFill();
+  }
 
-        } else loadMap();
+  const yearBtns = document.querySelectorAll('.map-control--year');
+  yearBtns.forEach(btn => {
+    if (btn.dataset.year === year.toString()) {
+      btn.classList.add('bold-button'); // Add bold style to clicked button
+    } else {
+      btn.classList.remove('bold-button'); // Remove bold style from other buttons
+    }
+  });
 
-        // Optionally set an 'active' class on the first button
-        if (container.firstChild) {
-          container.firstChild.classList.add('is-active');
-        }
-      };
+  if (caches && caches.keys()) {
+    caches.keys().then((keys) => {
+      Promise.all(keys.filter((k) => k === 'mapbox-tiles').map((k) => caches.delete(k)))
+        .then(() => { loadMap() })
+        .catch(() => { loadMap() });
+    })
+  } else loadMap();
 
-      function selectParty(party, year) {
-        console.log('Party selected:', party, 'for year:', year);
-        // Implement party selection logic here, for example:
-        // map.setFilter('your-layer', ['==', 'party', party]);
-        // map.setYear(year);
-      }
+  // Optionally set an 'active' class on the first button
+  if (container.firstChild) {
+    container.firstChild.classList.add('is-active');
+  }
+};
 
-      // Initialize with the default year
-      updatePartyButtons(2024);
+const selectParty = (party, year) => {
+  console.log('selectParty called with party:', party, 'and year:', year);
+  if (map) {
+    map.currentYear = year.toString();
+    map.currentFill = party;
+    map.setMapFill();
+  }
+};
+
+document.addEventListener('DOMContentLoaded', function () {
+  mapboxgl.clearStorage();
+  loadMap();
+
+  const yearButtons = document.querySelectorAll('.map-control--year');
+  yearButtons.forEach(button => {
+    button.addEventListener('click', function () {
+      updatePartyButtons(button.dataset.year);
     });
+  });
+
+  // Initialize with the default year and party buttons for 2024
+  updatePartyButtons(2024);
+});
   </script>
   </script>
 </body>
